--- a/public/css/src/chat/chat.css
+++ b/public/css/src/chat/chat.css
@@ -28,7 +28,6 @@
     display: flex;
     flex-flow: column nowrap;
     box-sizing: border-box;
-    padding-top: 20px;
 }
 
 .chat__loader {
@@ -61,17 +60,23 @@
     border-bottom: 1px solid #eee;
     position: relative;
     z-index: 1;
-    background: white;
     flex-shrink: 0;
     margin-bottom: 0px;
+    height: 74px;
+    background: white;
 }
 
 .chat-header__title {
     display: flex;
     justify-content: center;
+    font-size: 26px;
 }
 
-.chat-header__title span {}
+.chat-header__title span {
+    position: relative;
+    top: 4px;
+    color: #454545;
+}
 
 .chat-subheader {
     height: 84px;
@@ -179,7 +184,7 @@
 }
 
 .chat-rows-title {
-    background: #eee;
+    background: #f1f1f1;
     color: #676767;
     border-bottom: 1px solid #e0e0e0;
     padding: 8px 10px;
