--- a/public/css/src/search/search.css
+++ b/public/css/src/search/search.css
@@ -315,10 +315,11 @@
 
 .search-filters__close {
     position: absolute;
-    top: 12px;
-    right: 10px;
+    top: 16px;
+    right: 14px;
     cursor: pointer;
-    color: #ccc;
+    font-size: 14px;
+    color: #1b69ec;
 }
 
 .search-filters__close i {
