connecter + refactor + clean + bug fixs

--- a/public/css/lib/fontello/css/fontello-codes.css
+++ b/public/css/lib/fontello/css/fontello-codes.css
@@ -41,7 +41,7 @@
 .icon-location:before { content: '\e827'; } /* '' */
 .icon-headphones:before { content: '\e828'; } /* '' */
 .icon-gift:before { content: '\e829'; } /* '' */
-.icon-mail-1:before { content: '\e82a'; } /* '' */
+.icon-mail:before { content: '\e82a'; } /* '' */
 .icon-main-picture:before { content: '\e82b'; } /* '' */
 .icon-male:before { content: '\e82c'; } /* '' */
 .icon-mask:before { content: '\e82d'; } /* '' */
