--- a/public/css/src/chat/chat_inview.css
+++ b/public/css/src/chat/chat_inview.css
@@ -159,6 +159,9 @@
     position: relative;
 }
 
+.chat-inview-message a {
+    text-decoration: underline
+}
 .chat-inview-message__bubble.--pending {
     opacity: .5;
 }
