--- a/public/css/src/landing/landing.css
+++ b/public/css/src/landing/landing.css
@@ -11,7 +11,8 @@
     top: 25px;
     left: 40px;
     font-family: 'creamy';
-    font-size: 32px;
+    font-family: 'Skranji';
+    font-size: 20px;
     color: #3b5998;
 }
 
