--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -22,6 +22,7 @@
 
   <link rel="stylesheet" href="/fonts/creamy/creamy.css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800,300' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Skranji:700" rel="stylesheet"> 
   
   <link rel="stylesheet" href="/css/lib/fontello/css/fontello.css">
   <link rel="stylesheet" href="/css/lib/flags/flags.css">
@@ -547,7 +548,7 @@
           </div>
           <div class="settings-item" data-settings-type-id="new_match">
             <div class="settings-input">
-              <div class="settings-input__icon --round-icon"><i class="icon icon-thunder"></i></div>
+              <div class="settings-input__icon --round-icon"><i class="icon icon-thunder-right"></i></div>
               <div class="settings-input-label">
                 <div class="settings-input__label" data-lid="settings_emails_new_match_label"></div>
               </div>
