--- a/public/css/lib/fontello/css/fontello.css
+++ b/public/css/lib/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?29819472');
-  src: url('../font/fontello.eot?29819472#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?29819472') format('woff2'),
-       url('../font/fontello.woff?29819472') format('woff'),
-       url('../font/fontello.ttf?29819472') format('truetype'),
-       url('../font/fontello.svg?29819472#fontello') format('svg');
+  src: url('../font/fontello.eot?66858392');
+  src: url('../font/fontello.eot?66858392#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?66858392') format('woff2'),
+       url('../font/fontello.woff?66858392') format('woff'),
+       url('../font/fontello.ttf?66858392') format('truetype'),
+       url('../font/fontello.svg?66858392#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?29819472#fontello') format('svg');
+    src: url('../font/fontello.svg?66858392#fontello') format('svg');
   }
 }
 */
@@ -97,7 +97,7 @@
 .icon-location:before { content: '\e827'; } /* '' */
 .icon-headphones:before { content: '\e828'; } /* '' */
 .icon-gift:before { content: '\e829'; } /* '' */
-.icon-mail-1:before { content: '\e82a'; } /* '' */
+.icon-mail:before { content: '\e82a'; } /* '' */
 .icon-main-picture:before { content: '\e82b'; } /* '' */
 .icon-male:before { content: '\e82c'; } /* '' */
 .icon-mask:before { content: '\e82d'; } /* '' */
