--- a/public/css/src/before/before.css
+++ b/public/css/src/before/before.css
@@ -5,7 +5,7 @@
     background: rgb(255, 255, 255);
     box-shadow: 0 0 14px #B9B9B9;
     z-index: 1;
-    height: 90px;
+    height: 100px;
     display: none;
     flex-flow: column nowrap;
     justify-content: flex-start;
@@ -17,8 +17,8 @@
     justify-content: center;
     align-items: center;
     padding: 0!important;
-    height: 44px;
-    overflow: visible;
+    height: 54px;
+    /* overflow: visible; */
 }
 
 .be-browser .jspVerticalBar {
@@ -48,8 +48,9 @@
     outline: none;
     align-items: center;
     justify-content: center;
-    height: 56px;
+    height: 54px;
     position: relative;
+    flex-shrink: 0;
 }
 
 .be-address {
@@ -64,6 +65,7 @@
     font-family: 'Open sans';
     z-index: 0;
     position: relative;
+    flex-shrink: 1;
 }
 
 .be-address i {}
@@ -71,14 +73,14 @@
 .be-address span {
     margin: 0 2px;
 }  
-  
+   
 .be-dates__bar {
     width: 98px;
     border-radius: 100px;
     position: absolute;
     height: 4px;
     background: #1b69ec;
-    bottom: -7px;
+    top: 39px;
     left: 2px;
     display: none;
 }
