--- a/public/css/src/chat/chat.css
+++ b/public/css/src/chat/chat.css
@@ -64,6 +64,7 @@
     margin-bottom: 0px;
     height: 74px;
     background: white;
+    display: none;
 }
 
 .chat-header__title {
@@ -183,7 +184,7 @@
     flex-flow: column nowrap;
 }
 
-.chat-rows-title {
+.chat-rows-title, .notification--header {
     background: #f1f1f1;
     color: #676767;
     border-bottom: 1px solid #e0e0e0;
