--- a/public/css/src/map/map.css
+++ b/public/css/src/map/map.css
@@ -133,11 +133,15 @@
     color: #1b69ec;
     cursor: pointer;
 }
-.map-zoom__in {}
+.map-zoom__in,
+.map-zoom__out {
+    width: 100%;
+    height: 50%;
+}
 .map-zoom__out {}
 .map-zoom__splitter {
     background: #d9d9d9;
     height: 1px;
     width: 80%;
-    margin: 10px 0px;
+    flex-shrink: 0;
 }
