--- a/views/index-prod.html
+++ b/views/index-prod.html
@@ -509,7 +509,7 @@
           </div>
           <div class="settings-item" data-settings-type-id="new_match">
             <div class="settings-input">
-              <div class="settings-input__icon --round-icon"><i class="icon icon-thunder"></i></div>
+              <div class="settings-input__icon --round-icon"><i class="icon icon-thunder-right"></i></div>
               <div class="settings-input-label">
                 <div class="settings-input__label" data-lid="settings_emails_new_match_label"></div>
               </div>
