--- a/public/css/lib/fontello/css/fontello.css
+++ b/public/css/lib/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?66858392');
-  src: url('../font/fontello.eot?66858392#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?66858392') format('woff2'),
-       url('../font/fontello.woff?66858392') format('woff'),
-       url('../font/fontello.ttf?66858392') format('truetype'),
-       url('../font/fontello.svg?66858392#fontello') format('svg');
+  src: url('../font/fontello.eot?46921377');
+  src: url('../font/fontello.eot?46921377#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?46921377') format('woff2'),
+       url('../font/fontello.woff?46921377') format('woff'),
+       url('../font/fontello.ttf?46921377') format('truetype'),
+       url('../font/fontello.svg?46921377#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?66858392#fontello') format('svg');
+    src: url('../font/fontello.svg?46921377#fontello') format('svg');
   }
 }
 */
@@ -138,3 +138,6 @@
 .icon-angle-down:before { content: '\e850'; } /* '' */
 .icon-match:before { content: '\e851'; } /* '' */
 .icon-power:before { content: '\e852'; } /* '' */
+.icon-cross-medium:before { content: '\e853'; } /* '' */
+.icon-cross-thin:before { content: '\e854'; } /* '' */
+.icon-cross-fat:before { content: '\e855'; } /* '' */
