--- a/public/css/src/chat/chat.css
+++ b/public/css/src/chat/chat.css
@@ -143,7 +143,7 @@
     display: none;
     flex-flow: row nowrap;
     align-items: center;
-    height: 100px;
+    height: 90px;
     /* background: #eee; */
     cursor: pointer;
     border-bottom: 1px solid #eee;
@@ -257,20 +257,20 @@
     justify-content: center;
     margin-left: 20px;
     max-width: 300px;
+    color: #454545;
 }
 
 .chat-row-infos__name {
-    margin-bottom: 4px;
+    margin-bottom: 5px;
     font-size: 14px;
 }
 
 .chat-row-infos-name span {}
 
 .chat-row-infos__name .--name {
-    font-weight: 600;
+    font-weight: 500;
     margin-right: 6px;
-    font-size: 13px;
-    letter-spacing: -.3px;
+    font-size: 14px;
 }
 
 .chat-row-infos__preview {
@@ -294,8 +294,7 @@
 }
 
 .chat-row-time span {
-    font-weight: 600;
-    color: #191919;
+    font-weight: 500;
     font-size: 11px;
 }
 
@@ -326,10 +325,15 @@
 }
 
 .chat-row.--new .chat-row-infos__preview {
-    color: #454545;
+    color: #191919;
 }
 
-.chat-row.--new .chat-row-time span {}
+.chat-row.--new .chat-row-infos__name .--name {font-weight: 700;color: #191919;}
+
+.chat-row.--new .chat-row-time span {
+    font-weight: 700;
+    color: #191919;
+}
 
 .chat-row.--new.--pending .chat-row-time span {
     color: #FD7124;
