--- a/views/index-staged.html
+++ b/views/index-staged.html
@@ -22,6 +22,7 @@
 
   <link rel="stylesheet" href="/fonts/creamy/creamy.css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800,300' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Skranji:700" rel="stylesheet"> 
   
   <link rel="stylesheet" href="/css/lib/fontello/css/fontello.css">
   <link rel="stylesheet" href="/css/lib/flags/flags.css">
