--- a/public/css/lib/fontello/css/fontello-codes.css
+++ b/public/css/lib/fontello/css/fontello-codes.css
@@ -85,3 +85,4 @@
 .icon-cross-medium:before { content: '\e853'; } /* '' */
 .icon-cross-thin:before { content: '\e854'; } /* '' */
 .icon-cross-fat:before { content: '\e855'; } /* '' */
+.icon-create-before:before { content: '\e856'; } /* '' */
