--- a/public/css/src/before/before.css
+++ b/public/css/src/before/before.css
@@ -44,7 +44,6 @@
 .be-dates {
     width: 80%!important;
     display: flex;
-    color: #919191;
     outline: none;
     align-items: center;
     justify-content: center;
@@ -89,7 +88,7 @@
     position: relative;
     top: 2px;
     margin: 0 10px;
-    color: #ccc;
+    /* color: #ccc; */
     cursor: pointer;
     font-size: 12px;
     align-items: center;
