--- a/views/index-prod.html
+++ b/views/index-prod.html
@@ -667,7 +667,7 @@
 
       <div class="search-filters">
         <div class="search-filters__close --round-icon">
-          <i class="icon icon-cancel"></i>
+          <i class="icon icon-cross-fat"></i>
         </div>
         <div class="search-filters-section --gender">
           <div class="search-filters-section__title">
