--- a/public/css/src/before/before.css
+++ b/public/css/src/before/before.css
@@ -1,16 +1,4 @@
-.be-browser {
-    position: fixed;
-    top: 58px;
-    width: 100%;
-    background: rgb(255, 255, 255);
-    box-shadow: 0 0 14px #B9B9B9;
-    z-index: 1;
-    height: 100px;
-    display: none;
-    flex-flow: column nowrap;
-    justify-content: flex-start;
-    align-items: center;
-}
+.be-browser {width: 100%;height: 100%;display: flex;justify-content: center;align-items: center;}
 
 .be-browser .jspPane {
     flex-wrap: nowrap;
@@ -43,11 +31,11 @@
 
 .be-dates {
     width: 80%!important;
+    height: 100%;
     display: flex;
     outline: none;
     align-items: center;
     justify-content: center;
-    height: 54px;
     position: relative;
     flex-shrink: 0;
 }
@@ -65,6 +53,7 @@
     z-index: 0;
     position: relative;
     flex-shrink: 1;
+    display: none!important;
 }
 
 .be-address i {}
@@ -79,8 +68,8 @@
     position: absolute;
     height: 4px;
     background: #1b69ec;
-    top: 39px;
-    left: 2px;
+    top: 46px;
+    left: 3px;
     display: none;
 }
 
@@ -92,11 +81,13 @@
     cursor: pointer;
     font-size: 12px;
     align-items: center;
-    display: inline-flex;
+    display: flex;
     font-weight: 600;
     background: #ffffff;
     padding: 7px 12px;
     border-radius: 100px;
+    height: 100%;
+    box-sizing: border-box;
 }
 
 .be-dates__date.--active .be-dates__bar {
@@ -120,9 +111,9 @@
 .be-dates__date.--active span {}
 
 span.be-dates__offset {
-    margin-top: 10px;
+    /* margin-top: 10px; */
 }
-span.be-dates__count {font-weight: 400;margin-left: 6px;font-size: 10px;}
+span.be-dates__count {font-weight: 400;margin-left: 6px;font-size: 10px;margin-bottom: 10px;}
 
 .be-create__loader {
     position: absolute;
