--- a/public/css/src/search/search.css
+++ b/public/css/src/search/search.css
@@ -14,8 +14,7 @@
 
 .search__title {
     font-family: 'creamy';
-    font-size: 34px;
-    margin-top: 40px;
+    font-size: 22px;
     display: none;
 }
 
@@ -27,19 +26,15 @@
 .search-header__title h2 {}
 
 .search-filters__icon {
-    position: fixed;
-    right: 20px;
-    top: 80px;
-    font-size: 20px;
+    font-size: 18px;
     cursor: pointer;
-    background: white;
-    border: 2px solid;
     color: #1b69ec;
     height: 50px;
     width: 50px;
     z-index: 10;
     cursor: pointer;
-    /* transition: all ease-in-out .15s; */
+    position: absolute;
+    right: 4px;
 }
 
 .search-filters__icon:hover {
