--- a/views/index-prod.html
+++ b/views/index-prod.html
@@ -138,7 +138,7 @@
     <section class="app-section --menu" data-link="menu">
     
       <!-- Menu begin -->
-      <nav class="menu">
+      <nav class="app-subheader --menu">
         <div class="menu__line"></div>
         <li class="menu-item --profile" data-link="profile">
           <div class="menu-item__body">
@@ -614,6 +614,9 @@
 
      <!-- Map start -->
     <section class="app-section --map" data-link="map">
+      <div class="app-subheader --map">
+        
+      </div>
       <div class="js-map-wrap">
         <!-- Holds the Google map -->
       </div>
@@ -658,11 +661,13 @@
      <!-- Search start -->
     <section class="app-section --search" data-link="search">
       
-      <div class="search__title">
-        <h2 data-lid="search_title"></h2>
-      </div>
-      <div class="search-filters__icon --round-icon">
-        <i class="icon icon-filters"></i>
+      <div class="app-subheader --search">
+        <div class="search__title">
+          <h2 data-lid="search_title"></h2>
+        </div>
+        <div class="search-filters__icon --round-icon">
+          <i class="icon icon-filters"></i>
+        </div>
       </div>
 
       <div class="search-filters">
