--- a/public/css/src/common.css
+++ b/public/css/src/common.css
@@ -109,6 +109,7 @@ button:hover {
     z-index: 100;
     width: 100%;
     top: 58px;
+    left: 0;
     margin-bottom: 0;
     display: flex;
     align-items: center;
