--- a/public/css/src/menu/menu.css
+++ b/public/css/src/menu/menu.css
@@ -149,6 +149,8 @@
     color: #454545;
 }
 
+.update-pictures {margin-bottom: 15px;font-weight: 600;font-size: 14px;border: 2px solid;padding: 10px 45px;color: #1b69ec;}
+
 .menu__loader {
     width: 32px;
 }
@@ -244,5 +246,12 @@
     .app-subheader .menu-item__bar {
         width: 100%;
         margin-left: 0;
+    }
+}
+
+@media (max-width: 400px) {
+
+    .app-subheader.--menu h3 {
+        display: none;
     }
 }
