--- a/public/css/src/landing/landing.css
+++ b/public/css/src/landing/landing.css
@@ -11,9 +11,10 @@
     top: 25px;
     left: 40px;
     font-family: 'creamy';
-    font-family: 'Skranji';
-    font-size: 20px;
-    color: #3b5998;
+    font-family: 'quenda';
+    font-size: 24px;
+    font-weight: bolder;
+    color: #db4760;
 }
 
 .landing-lang {
@@ -43,6 +44,7 @@
 .landing-title {
     font-family: 'creamy';
     font-size: 40px;
+    flex-shrink: 0;
 }
 
 .landing-title h1 {}
@@ -79,19 +81,22 @@
 }
 
 .landing-screenshots {
-    width: 110px;
+    width: 100px;
     margin: 40px;
     padding: 10px;
-    height: 190px;
+    height: 175px;
+    $: 46.5%
     flex-shrink: 0;
     position: relative;
+    flex-shrink: 0;
 }
 
 .landing__phone {
     position: absolute;
-    width: 125px;
-    top: -44px;
-    left: 0;
+    width: 100%;
+    top: -21%;
+    left: 50%;
+    transform: translate(-50%,0);
     z-index: -1;
 }
 
@@ -101,9 +106,10 @@
 
 .landing__screenshot {
     position: absolute;
-    width: 108px;
-    left: 10px;
-    top: -9px;
+    width: 87%;
+    left: calc(51%);
+    transform: translate(-50%,0);
+    top: -7px;
 }
 
 .landing__screenshot img {
@@ -165,6 +171,7 @@
     font-weight: 700;
     color: #3b5998;
     cursor: pointer;
+    text-align: center;
 }
 
 .landing-footer__item:hover {
@@ -172,3 +179,54 @@
 }
 
 .landing-footer__item span {}
+
+
+@media (max-width: 400px) {
+   
+   .multi-landing {
+       padding: 15px;
+   }
+
+   .landing-screenshots {
+        width: 28%;
+        height: 70%;
+        top: 20px;
+   }
+
+   .landing__screenshot {
+       margin-top: -6%;
+   }
+
+
+   .landing-lang button {
+       width: 90px;
+       text-overflow: ellipsis;
+       overflow: hidden;
+       white-space: nowrap;
+   }
+    
+   .landing-body {
+       height: 200px;
+   }
+   
+   .landing-subtitle {
+       width: 100%;
+       margin-bottom: 10px;
+   }
+
+   .landing-privacy {
+       width: 100%;
+       font-size: 7px;
+   }
+
+   .landing-footer__item {
+       font-size: 7px;
+       margin: 0px 10px;
+   }
+
+   .landing-connexion button {
+       width: 210px;
+       font-size: 14px;
+   }
+
+}
