--- a/public/css/src/pictures/pictures.css
+++ b/public/css/src/pictures/pictures.css
@@ -303,7 +303,7 @@
   color: white;
   font-size: 12px;
   width: 70%;
-  top: 140px;
+  bottom: 28px;
   left: 50%;
   border-radius: 100px;
   transform: translate(-50%,0);
