--- a/views/index-staged.html
+++ b/views/index-staged.html
@@ -19,10 +19,19 @@
   <meta property="og:description" content="L'application Meefore permet de faire des rencontres en participant à des before proches de chez soi.">
 
   <meta name="description" content="L'application Meefore permet de faire des rencontres en participant à des before proches de chez soi">
+ 
+  <link rel="apple-touch-icon" sizes=="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+  <link rel="manifest" href="/manifest.json">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="apple-mobile-web-app-title" content="Meefore">
+  <meta name="application-name" content="Meefore">
+  <meta name="theme-color" content="#ffffff">
 
   <link rel="stylesheet" href="/fonts/creamy/creamy.css">
+  <link rel="stylesheet" href="/fonts/quenda-medium/quenda-medium.css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800,300' rel='stylesheet' type='text/css'>
-  <link href="https://fonts.googleapis.com/css?family=Skranji:700" rel="stylesheet"> 
   
   <link rel="stylesheet" href="/css/lib/fontello/css/fontello.css">
   <link rel="stylesheet" href="/css/lib/flags/flags.css">
@@ -193,6 +202,9 @@
       <section class="menu-section --profile" data-link="profile">
         <div class="menu-section__subtitle">
           <h3 data-lid="menu_subsection_pictures"></h3>
+        </div>
+        <div class="update-pictures js-edit-pictures --mb">
+          <h3 data-lid="mb_update_pictures"></h3>
         </div>
         <div class="pictures">
           <!-- %% Dynamically injected %%-->
