--- a/public/css/src/common.css
+++ b/public/css/src/common.css
@@ -242,6 +242,9 @@ button:hover {
     padding-bottom: 5px;
 }
 
+.settings-input + .settings-input__explanation {
+    left: 20px;
+}
 .settings-input-label {
     display: flex;
     width: 100%;
