--- a/public/css/src/landing/landing.css
+++ b/public/css/src/landing/landing.css
@@ -8,13 +8,18 @@
 
 .landing-logo {
     position: absolute;
-    top: 25px;
-    left: 40px;
+    top: 15px;
+    left: 30px;
     font-family: 'creamy';
     font-family: 'quenda';
     font-size: 24px;
     font-weight: bolder;
-    color: #db4760;
+    width: 60px;
+}
+
+.landing-logo img {
+    width: 100%;
+    height: 100%;
 }
 
 .landing-lang {
